--- a/index.ipynb
+++ b/index.ipynb
@@ -147,8 +147,9 @@
    "source": [
     "import pandas\n",
     "travel_df = pandas.read_excel('./cities.xlsx')\n",
+    "travel_\n",
     "cities = travel_df.to_dict('records')\n",
-    "cities[0]"
+    "cities"
    ]
   },
   {
