--- a/index.ipynb
+++ b/index.ipynb
@@ -247,7 +247,9 @@
    "source": [
     "import pandas\n",
     "travel_df = pandas.read_excel('./cities.xlsx')\n",
-    "travel_df\n"
+    "travel_df\n",
+    "cities = travel_df.to_dict('records')\n",
+    "cities"
    ]
   },
   {
